修改 统一api请求

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>by_iview2.0</title>
+    <title>first</title>
   </head>
   <body>
     <div id="app"></div>
